refactor(config): streamline Xendit secret key selection
- Used destructuring to extract environment variables.
- Simplified the logic for selecting the appropriate secret key based on the environment.
- Improved code readability and efficiency.

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 PORT='MyPort'
-XENDIT_SECRET_KEY=SecretApi
+DEV_XENDIT_SECRET_KEY=DevSecretApi
+PRODUCTION_XENDIT_SECRET_KEY=ProdSecretApi
+APP_ENV=local
